--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,19 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    // Make sure signingConfigs is defined before buildTypes.
+    signingConfigs {
+        release {
+            keyAlias 'keystore-android'
+            keyPassword 'ibj123'
+            storeFile file("/Users/deekshith-dv/Desktop/keystore/keystore-android.jks")
+            storePassword 'ibj123'
+        }
+    }
     buildTypes {
         release {
+            // Use signing config for build type
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
